Bugfixing, both scala logos should be the same size w or wout retina + spacing fixes

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -118,7 +118,9 @@ a.brand {
   transition: background .2s ease-in;
 }
 
-.nav > li > a, img {
+.nav > li > a,
+#source-code > a > img,
+#scala-lang-twitter > a > img {
   margin-right: -10px;
 }
 
